Ready to test on mobile 1

--- a/src/Components/css/GaleryImg.css
+++ b/src/Components/css/GaleryImg.css
@@ -40,6 +40,8 @@
     border-radius: 10px;
     box-shadow: 0 0 5px white;
     position: relative;
+    height: 80%;
+    max-width: 90%;
 }
 .closeIcon {
     width: 30px;
