--- a/src/styles.css
+++ b/src/styles.css
@@ -16,19 +16,16 @@
 
 body {
     background-color: #F8F9FA;
-    height: 100vh;
+    max-height: 100vh;
     margin: 0px;
 }
 
 /*Hero page*/
 .heroPage {
-    height: 100vh;
+    height: fit-content;
     overflow: hidden;
 }
 .vidseoBkg {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     z-index: -5;
 }
@@ -41,7 +38,7 @@ body {
 }
 .txtWelcome {
     font-family: 'Esteban';
-    font-size: 70px;
+    font-size: 5vw;
     margin: 0;
     font-weight: 200;
     opacity: 0;
@@ -57,7 +54,7 @@ body {
 
 .txtName {
     font-family: 'Clicker';
-    font-size: 100px;
+    font-size: 15vw;
     margin: 0;
     font-weight: 100;
     color: #FF6D00;
@@ -65,11 +62,23 @@ body {
 .txtInfo {
     font-family: 'Esteban';
     margin: 0;
-    font-size: 18px;
+    font-size: 3vw;
 }
 .telefonNr {
     text-decoration: underline;
     cursor: pointer;
+}
+
+@media screen and (min-width: 1600px) {
+    .txtWelcome {
+       font-size: 80px;
+    }
+    .txtName {
+        font-size: 100px;
+    }
+    .txtInfo {
+        font-size: 18px;
+    }
 }
 
 /* About us section*/
@@ -90,13 +99,14 @@ body {
     font-family: 16px;
 }
 .teamImg {
-    width: 500px;
-    height: 500px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
+    border: 10px solid rgb(63, 63, 63);
 }
 .puzzleCont {
-    width: 500px;
-    height: 500px;
+    width: 350px;
+    height: 350px;
     background-image: url('./images/home/presentationPlate.jpeg');
     background-position: center;
     background-size: cover;
@@ -108,7 +118,7 @@ body {
 }
 .puzzlePiece {
     background-image: url('./images/home/presentationPlate.jpeg');
-    background-position: 20% 0%;
+    background-position: 20% 10%;
     background-size: 300%;
     width: 95%;
     height: 95%;
@@ -130,5 +140,5 @@ body {
     flex: 1;
     color: #F8F9FA;
     font-family: 'Clicker';
-    font-size: 2rem;
+    font-size: 150%;
 }
