--- a/src/Pages/css/Speisekarte.css
+++ b/src/Pages/css/Speisekarte.css
@@ -75,3 +75,7 @@
     font-family: 'Esteban';
     background-color: #FF6D00;
 }
+.infoBanner {
+    border-radius: 10px;
+    box-shadow: 0px 0px 7px #000;
+}
