--- a/src/Pages/css/Speisekarte.css
+++ b/src/Pages/css/Speisekarte.css
@@ -40,7 +40,7 @@
     height: 20px;
 }
 .speisekarteCont {
-    background-image: url('../../images/speisekarte/bkg.jpg');
+    background-image: url('../../images/speisekarte/bkg.webp');
     background-position: center;
     background-size: 100%;
 }
